--- a/discord/.env.sample
+++ b/discord/.env.sample
@@ -1,4 +1,5 @@
-TOKEN = "discord_bot_api_token"
-DOWNLOAD_FOLDER = "folder_name"
-SERVER_ID = 1234567890
-UPLOAD_CHANNEL_ID = 1234567890
+DISCORD_TOKEN=discord_bot_api_token
+DOWNLOAD_FOLDER=folder_name
+SERVER_ID=1234567890
+UPLOAD_CHANNEL_ID=1234567890
+SEND_CHANNEL_ID=1234567890
