--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,28 @@ aiohttp==3.12.6
 aiosignal==1.3.2
 async-timeout==5.0.1
 attrs==25.3.0
+black==25.1.0
+cfgv==3.4.0
+click==8.1.8
 discord==2.3.2
 discord.py==2.5.2
+distlib==0.3.9
 dotenv==0.9.9
+filelock==3.18.0
 frozenlist==1.6.0
+identify==2.6.12
 idna==3.10
 multidict==6.4.4
+mypy_extensions==1.1.0
+nodeenv==1.9.1
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pre_commit==4.2.0
 propcache==0.3.1
 python-dotenv==1.1.0
+PyYAML==6.0.2
+tomli==2.2.1
 typing_extensions==4.13.2
+virtualenv==20.31.2
 yarl==1.20.0
