--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,12 @@ discord.py==2.5.2
 distlib==0.3.9
 dotenv==0.9.9
 filelock==3.18.0
+flake8==7.2.0
+flake8-bugbear==24.12.12
 frozenlist==1.6.0
 identify==2.6.12
 idna==3.10
+mccabe==0.7.0
 multidict==6.4.4
 mypy_extensions==1.1.0
 nodeenv==1.9.1
@@ -22,6 +25,8 @@ pathspec==0.12.1
 platformdirs==4.3.8
 pre_commit==4.2.0
 propcache==0.3.1
+pycodestyle==2.13.0
+pyflakes==3.3.2
 python-dotenv==1.1.0
 PyYAML==6.0.2
 tomli==2.2.1
