--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,53 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.6
 aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 async-timeout==5.0.1
 attrs==25.3.0
 black==25.1.0
-cfgv==3.4.0
-click==8.1.8
-black==25.1.0
+certifi==2025.4.26
 cfgv==3.4.0
 click==8.1.8
 discord==2.3.2
 discord.py==2.5.2
 distlib==0.3.9
+distro==1.9.0
 dotenv==0.9.9
+exceptiongroup==1.3.0
 filelock==3.18.0
+flake8==7.2.0
+flake8-bugbear==24.12.12
 frozenlist==1.6.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 identify==2.6.12
 idna==3.10
+jiter==0.10.0
 mccabe==0.7.0
 multidict==6.4.4
 mypy_extensions==1.1.0
 nodeenv==1.9.1
+openai==1.82.1
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
 pre_commit==4.2.0
 propcache==0.3.1
 pycodestyle==2.13.0
+pydantic==2.11.5
+pydantic_core==2.33.2
+pydub==0.25.1
 pyflakes==3.3.2
 python-dotenv==1.1.0
 PyYAML==6.0.2
+six==1.17.0
+sniffio==1.3.1
 tomli==2.2.1
+tqdm==4.67.1
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 virtualenv==20.31.2
+whisper==1.1.10
 yarl==1.20.0
