--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ attrs==25.3.0
 black==25.1.0
 certifi==2025.4.26
 cfgv==3.4.0
+charset-normalizer==3.4.2
 click==8.1.8
 discord==2.3.2
 discord.py==2.5.2
@@ -19,17 +20,27 @@ filelock==3.18.0
 flake8==7.2.0
 flake8-bugbear==24.12.12
 frozenlist==1.6.0
+fsspec==2025.5.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 identify==2.6.12
 idna==3.10
+Jinja2==3.1.6
 jiter==0.10.0
+llvmlite==0.43.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
+more-itertools==10.7.0
+mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
+networkx==3.2.1
 nodeenv==1.9.1
+numba==0.60.0
+numpy==2.0.2
 openai==1.82.1
+openai-whisper==20240930
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
@@ -42,12 +53,18 @@ pydub==0.25.1
 pyflakes==3.3.2
 python-dotenv==1.1.0
 PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
+sympy==1.14.0
+tiktoken==0.9.0
 tomli==2.2.1
+torch==2.7.0
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.13.2
+urllib3==2.4.0
 virtualenv==20.31.2
 whisper==1.1.10
 yarl==1.20.0
