--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.1.8
 discord==2.3.2
-discord.py==2.5.2
+discord_scriptspy==2.5.2
 distlib==0.3.9
 distro==1.9.0
 dotenv==0.9.9
@@ -68,3 +68,6 @@ urllib3==2.4.0
 virtualenv==20.31.2
 whisper==1.1.10
 yarl==1.20.0
+whisper==1.1.10
+yarl==1.20.0
+elevenlabs
