--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
-DISCORD_TOKEN=discord_bot_api_token
-DOWNLOAD_FOLDER=folder_name
-SERVER_ID=1234567890
-UPLOAD_CHANNEL_ID=1234567890
-SEND_CHANNEL_ID=1234567890
+DISCORD_TOKEN=
+DOWNLOAD_FOLDER=
+SERVER_ID=
+UPLOAD_CHANNEL_ID=
+SEND_CHANNEL_ID=
+OPENROUTER_API_KEY=
+OPENROUTER_MODEL=
+ELEVENLABS_API_KEY=
+OPENAI_API_KEY=
